crates/strider-analyze/tests/snapshots/v3__mips64le__calls__nested_3deep.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x120000e18:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "5" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "5" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "5" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "10" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "14" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "17" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
